# noise

./: CLAUDE.md  README.md  pyproject.toml
config/: active_noise_params.json  denoise_configs.json  denoise_params.json  metrics_params.json  noise_params.json
docs/: ACTIVE_PARAMS_USAGE.md  APPLY_NOISE.md  BASELINE_METRICS.md  C_TEST_DATA.md  DENOISE.md  DENOISE_ALGORITHMS_RESEARCH.md  DENOISE_IMPLEMENTATION_SUMMARY.md  NOISE_STUDY.md  TEST_DATA.md  blah.md
scripts/: add_noise.py  apply_denoise.py  apply_noise.py  copy_thermal_samples.py  generate_noise_suite.py  metadata_logger.py  run_baseline_metrics.py  test_active_params.py  test_denoise.py  test_metrics.py  test_noise_logger.py
src/: denoise.py  metrics.py  noise_logger.py
