[project]
name = "noise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm3d>=4.0.3",
    "flake8>=7.3.0",
    "imageio>=2.37.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "ptwt>=1.0.1",
    "pywavelets>=1.9.0",
    "requests>=2.32.5",
    "roboflow>=1.2.11",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]
